# clinicalcompress

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
clinicalcompress/: __init__.py  api.py  cli.py  compress.py  models.py  protect.py  tokenizer.py  verify.py
docs/: index.html
examples/: quickstart.py
examples/sample_notes/: cardiology_note.txt  gi_note.txt  messy_transcript.txt
tests/: test_api.py  test_compress.py  test_protect.py  test_verify.py
tests/fixtures/: __init__.py
webui/: README.md  app.py  index.html
