[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinicalcompress"
version = "0.1.1"
description = "Compress clinical text without losing (or flipping) clinical meaning."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Anurag Chatterjee" }]
requires-python = ">=3.9"
keywords = ["clinical", "nlp", "healthcare", "compression", "tokens", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "click>=8.1",
    "rich>=13",
    "regex>=2024",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
ui = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage = "https://versionone.health/tools/clinicalcompress"
Repository = "https://github.com/VersionOne-Health/clinicalcompress"

[project.scripts]
clinicalcompress = "clinicalcompress.cli:cli"

[tool.setuptools.packages.find]
include = ["clinicalcompress*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
